--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 name: Ashwini Jeggari, Phd student | Bioinformatician
 markdown: kramdown
 
-theme: jekyll-theme-cayman
+theme: jekyll-theme-tactile
